--- a/myportfolio/pages/globals.css
+++ b/myportfolio/pages/globals.css
@@ -53,4 +53,31 @@ border-radius: 2rem;
     font-weight: bold;
     font-size: 24px;
   }
+  .progress-bar-container {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: white;
+    z-index: 9999;
+  }
   
+  .progress-bar {
+    height: 100%;
+    background: linear-gradient(to right, #10B981, white);
+    transition: width 0.3s;
+  }
+  
+  .animate-progress {
+    animation: animateProgressBar 2s ease-in-out forwards;
+  }
+  
+  @keyframes animateProgressBar {
+    0% {
+      width: 0;
+    }
+    100% {
+      width: 100%;
+    }
+  }
